--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,9 @@ a {
 * {
   box-sizing: border-box;
 }
+
+@layer components {
+  .container {
+    @apply bg-secondary w-screen h-screen flex flex-col items-center justify-center;
+  }
+}
