--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,9 @@ html,
 body {
   padding: 0;
   margin: 0;
+  width: 100%;
+  min-height: 100vh;
+  background-color: rgba(247, 250, 252, 1);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -22,6 +25,6 @@ a {
 
 @layer components {
   .container {
-    @apply bg-secondary w-screen h-screen flex flex-col items-center justify-center;
+    @apply w-[100vw] min-h-screen flex flex-col items-center justify-start my-0 mx-auto;
   }
 }
