--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,10 @@ a {
 
 @layer components {
   .container {
-    @apply w-[100vw] min-h-screen flex flex-col items-center justify-start my-0 mx-auto;
+    @apply w-[100vw] min-w-full min-h-screen flex flex-col items-stretch justify-start my-0 mx-auto;
+  }
+  
+  .btn-active {
+    @apply bg-primary text-white
   }
 }
