--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,8 +25,9 @@ a {
 
 @layer components {
   .container {
-    @apply w-[100vw] min-w-full min-h-screen flex flex-col items-stretch justify-start my-0 mx-auto;
+    @apply w-screen min-h-screen flex flex-col items-stretch justify-start my-0 mx-auto;
   }
+  /* w-[100vw] min-w-full */
   
   .btn-active {
     @apply bg-primary text-white
