FEAT: Building out the market place pages and interactions

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ a {
 
 @layer components {
   .container {
-    @apply w-screen min-h-screen flex flex-col items-stretch justify-start my-0 mx-auto;
+    @apply w-screen min-h-screen mobile:w-[100vw] mobile:min-w-full flex flex-col items-stretch justify-start my-0 mx-auto;
   }
   /* w-[100vw] min-w-full */
   
