--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
   background-color: rgba(247, 250, 252, 1);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -25,9 +25,9 @@ a {
 
 @layer components {
   .container {
-    @apply w-screen min-h-screen mobile:w-[100vw] mobile:min-w-full flex flex-col items-stretch justify-start my-0 mx-auto;
+    @apply w-screen desktop:max-w-screen-desktop mobile:max-w-full mx-auto my-0;
   }
-  /* w-[100vw] min-w-full */
+  /* w-[100vw] min-w-ful min-h-screen mobile:w-[100vw] mobile:min-w-full flex flex-col items-center justify-start my-0 mx-autol */
   
   .btn-active {
     @apply bg-primary text-white
