--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,9 @@ a {
 }
 
 @layer components {
+  body {
+    @apply dark:bg-slate-800
+  }
   .container {
     @apply w-screen desktop:max-w-screen-desktop mobile:max-w-full mx-auto my-0;
   }
